--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,9 +15,16 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.demoText {
+  text-align: center;
+  font-size: 100px;
+  width: 100%;
+}
+
 .btn {
   display: block;
   width: 300px;
+  height: 1.5em;
   font-size: xx-large;
   border-radius: 400px;
   border: none;
@@ -28,4 +35,8 @@ body {
 
 .btn:hover {
   background-color: #ddd;
+}
+
+.btn:active {
+  background-color: white;
 }
