--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,12 +7,11 @@ body {
   background-color: rgb(50, 205, 202);
 }
 
-.main {
-  position: absolute;
-  top: 50vh;
-  left: 50vw;
+.section {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
   padding: 10px;
-  transform: translate(-50%, -50%);
 }
 
 .demoText {
@@ -31,6 +30,7 @@ body {
   margin: 5px;
   background-color: white;
   transition: all 0.2s;
+  align-items: center;
 }
 
 .btn:hover {
